--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,7 +148,7 @@
                         </p>
                         <p class="button">
                             <button class="btn button">Novo</button>
-                            <button class="btn button" type="submit">salvar</button>
+                            <button class="btn button" type="submit" id="salvarContato">salvar</button>
                             <button class="btn button">Anterior</button>
                         </p>
                         <p class="button">
